--- a/statamic/_themes/main/templates/property_lease.html
+++ b/statamic/_themes/main/templates/property_lease.html
@@ -81,7 +81,7 @@
 					</div>
 					<div class="open-house">
 						{{ if openhouse }}
-							Open House: {{ openhouse_details }}
+							<span>Open House: {{ openhouse_details }}</span>
 						{{ endif }}
 					</div>				
 				</div>
