--- a/statamic/_themes/main/templates/landing.html
+++ b/statamic/_themes/main/templates/landing.html
@@ -8,8 +8,8 @@
 		<div class="container">
 
 
-			<div class="grid-3 centered">
-				<a href="{{ url }}company" class="circle-nav">
+			<!-- <div class="grid-3 centered"> -->
+				<a href="{{ url }}company" class="grid-3 centered circle-nav">
 				<figure>
 					{{ theme:partial src="svg/home_glasses" }}
 					<figcaption>
@@ -19,21 +19,21 @@
 					</figcaption>
 				</figure>
 				</a>
-			</div>
-			<div class="grid-3 centered">
-				<a href="{{ url }}properties" class="circle-nav">
+			<!-- </div> -->
+			<!-- <div class="grid-3 centered"> -->
+				<a href="{{ url }}properties" class="grid-3 centered circle-nav">
 					<figure>
 						{{ theme:partial src="svg/home_building" }}
 						<figcaption>
 							<h4>Search Listings</h4>
-							<p>Search New York City’s most in-demand townhouses and small buildings.</p>
+							<p>New York City’s most in-demand townhouses and small buildings.</p>
 							<p class="sub-title">SEE THE PROPERTIES ></p>							
 						</figcaption>
 					</figure>
 				</a>
-			</div>
-			<div class="grid-3 centered">
-				<a data-toggle="modal" data-target="#contact-modal" href="#" class="circle-nav">
+			<!-- </div> -->
+			<!-- <div class="grid-3 centered"> -->
+				<a data-toggle="modal" data-target="#contact-modal" href="#" class="grid-3 centered circle-nav">
 					<figure>
 						{{ theme:partial src="svg/home_for_sale" }}
 						<figcaption>
@@ -43,9 +43,9 @@
 						</figcaption>
 					</figure>
 				</a>
-			</div>
-			<div class="grid-3 centered">
-				<a href="{{ url }}neighborhoods" class="circle-nav">
+			<!-- </div> -->
+			<!-- <div class="grid-3 centered"> -->
+				<a href="{{ url }}neighborhoods" class="grid-3 centered circle-nav">
 					<figure>
 						{{ theme:partial src="svg/home_neighborhood" }}
 						<figcaption>
@@ -55,7 +55,7 @@
 						</figcaption>
 					</figure>
 				</a>
-			</div>
+			<!-- </div> -->
 		</div>
 	</section>
 	<section class="circle-icon light-gray-bg" id="featured-properties">
