--- a/src/scss/modules/_landing_subnav.scss
+++ b/src/scss/modules/_landing_subnav.scss
@@ -1,36 +1,35 @@
 .landing-sub-nav {
-	padding: 120px 0;
+	padding: 45px 0;
+	@include clearfix;
 	.grid-3 {
 		position: relative;
 		@include clearfix;
-		* {
-			max-width: 100%;
+		padding-top: 25%;
+		width: 25%;
+		&:focus {
+			outline: none;
 		}
 	}
-	zoom:1;
 	overflow: hidden;
-	a, figure, svg, figcaption {
-		@include clearfix;
-		display: block;
-	}
-	a {
-		padding-top: 150px;
-	}
 	figure {
-		max-width: 100%;
 		position: absolute;
     top: 50%;
     transform: translateY(-50%);
     margin: 0;
+    padding: 20px;
+    display: block;
+    width: 100%;
 	}
 	p, span {
 		opacity: 0;
-		max-height: 0;
 		overflow: hidden;
 		margin: 0;
 	}
 	svg {
 		transition: all 750ms ease;
+		margin-left: auto;
+		margin-right: auto;
+		margin-top: 60px;
 		margin-bottom: 20px;
 		* {
 			fill: $text-green;
@@ -62,8 +61,7 @@
 		&:hover {
 			svg {
 				opacity: 0;
-				margin-top: -100%;
-				margin-bottom: 60%;
+				margin-top: -50%;
 			}
 			h4 {
 				margin-bottom: 15px;
