background image on preview image cover

--- a/src/scss/modules/_property_tiles.scss
+++ b/src/scss/modules/_property_tiles.scss
@@ -23,7 +23,7 @@
 		@include span(4 of 8 no-gutter);
 		// width: 180px;
 		background-color: $light-gray;
-		background-size: contain;
+		background-size: cover;
 		text-align: center;
 		// margin-left: auto;
 		// margin-right: auto;
