--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -42,6 +42,7 @@
 @import 'modules/_landing_subnav.scss';
 @import 'modules/_circle.scss';
 @import 'modules/_property_tiles.scss';
+@import 'modules/_neighborhood_tiles.scss';
 @import 'modules/_insight_tile.scss';
 @import 'modules/_agents_tile.scss';
 
