--- a/src/scss/modules/_neighborhood_tiles.scss
+++ b/src/scss/modules/_neighborhood_tiles.scss
@@ -2,9 +2,23 @@
 	padding: 10px;
 	margin: 10px;
 	background-color: #fff;
-
+	display: block;
+	border: 1px solid transparent;
+	transition: all 100ms ease;
+	&:hover {
+		border: 1px solid $text-green;
+		h2 {
+			color: $text-green;
+		}
+	}
 	.preview-image {
-		height: 300px;
+		height: 260px;
 		width: 100%;
+	}
+	h2 {
+		font-family: $header-font-family-medium-italic;
+		font-size: 28px;
+		margin-bottom: 60px;
+		margin-top: 10px;
 	}
 }
