--- a/statamic/_themes/main/layouts/default.html
+++ b/statamic/_themes/main/layouts/default.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>{{ _site_name }}</title>
+  <title>{{ title }} - {{ _site_name }}</title>
   <!-- build:css -->
   <link rel="stylesheet" href="{{ theme:css }}" />
   <!-- endbuild -->
