neighborhood overview and individual pages

--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -68,10 +68,13 @@ img {
   background-color: $background-light-gray;
 }
 
-.insights {
-  background-color: #F4FBF9;
+.seafoam-bg {
+  background-color: $seafoam-bg;
 }
 
+.dark-seafoam-bg {
+  background-color: $dark-seafoam-bg;
+}
 .similar-properties-gray {
   background-color: $similar-properties-gray;
 }
