--- a/src/scss/_utils.scss
+++ b/src/scss/_utils.scss
@@ -60,7 +60,8 @@ $background-light-gray: #F7F7F7;
 $header-font-color: #25282A;
 $light-font-color: #A7A4A4;
 $agents-background: #F5F5F5;
-$insights: #F4FBF9;
+$seafoam-bg: #F4FBF9;
+$dark-seafoam-bg: #e4f4f1;
 $red: #FF0000;
 $modal-text: #CCCCCC;
 
