--- a/statamic/_themes/main/layouts/default.html
+++ b/statamic/_themes/main/layouts/default.html
@@ -11,7 +11,7 @@
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCa3ywQ6GzCRIlFJsqT0_a1fBhaP7MoJpM">
     </script> -->
 </head>
-<body>
+<body data-spy="scroll" data-target="#secondary-nav">
 
     <div class="page-wrap">
       {{ theme:partial src="nav" }}
@@ -22,6 +22,8 @@
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/react.min.js"></script> -->
   <!-- build:js -->
   <script src="{{ theme:js }}"></script>
+  <script type="text/javascript">
+  </script>
   <!-- endbuild -->
 </body>
 </html>
