--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -57,6 +57,7 @@ nav {
 		display: block;
 		padding: 23px 15px;
 		font-size: 13px;
+
 		.left {
 			padding: 0;
 		}
@@ -64,9 +65,61 @@ nav {
 			outline: none;
 		}
 	}
+	&#secondary-nav {
+		z-index: 100;
+		&.stuck {
+			position: fixed;
+			margin-top: 78px;
+		}
+		ul li {
+			@include gallery(1 of 4 no-gutter);
+			border-radius: 0;
+			border-right: 1px solid $dark-gray;
+			background-color: #CCCCCC;
+			a {
+				display:block;
+				text-align: center;
+				color: white;
+				font-family: $header-font-medium;
+				font-size: 20px;
+				padding-top: 20px;
+				padding-bottom: 20px;
+				&:last-of-type {
+					border-right: none;
+				}
+				&:hover {
+					box-shadow: none;
+					background-color: $text-green;
+				}
+			}
+			&.active {
+				background-color: $text-green;
+					&.muted {
+						background-color: #CCCCCC;
+					}
+				a {
+					
+					box-shadow: none;
+
+				}
+
+			}
+		}
+
+	}
 }
 
-nav li a:hover, nav li a:focus, nav li a.current {
+.secondary-nav-link {
+    display: block!important;
+    position: relative!important;
+    margin: 0!important;
+    padding: 0!important;
+    height: 0!important;
+    top: -232px;
+    visibility: hidden!important;
+}
+
+nav li a:hover, nav li a:focus, nav li a.active {
 	background-color: transparent;
 	color: $green;
 	box-shadow: 0px 3px 0px 0px;
