--- a/statamic/_themes/main/css/main.css
+++ b/statamic/_themes/main/css/main.css
@@ -545,6 +545,158 @@ tbody.collapse.in {
   transition-duration: 0.35s;
   transition-timing-function: ease; }
 
+.nav {
+  margin-bottom: 0;
+  padding-left: 0;
+  list-style: none; }
+
+.nav:before,
+.nav:after {
+  content: " ";
+  display: table; }
+
+.nav:after {
+  clear: both; }
+
+.nav > li {
+  position: relative;
+  display: block; }
+
+.nav > li > a {
+  position: relative;
+  display: block;
+  padding: 10px 15px; }
+
+.nav > li > a:hover,
+.nav > li > a:focus {
+  text-decoration: none;
+  background-color: #eeeeee; }
+
+.nav > li.disabled > a {
+  color: #777777; }
+
+.nav > li.disabled > a:hover,
+.nav > li.disabled > a:focus {
+  color: #777777;
+  text-decoration: none;
+  background-color: transparent;
+  cursor: not-allowed; }
+
+.nav .open > a,
+.nav .open > a:hover,
+.nav .open > a:focus {
+  background-color: #eeeeee;
+  border-color: #337ab7; }
+
+.nav .nav-divider {
+  height: 1px;
+  margin: 9px 0;
+  overflow: hidden;
+  background-color: #e5e5e5; }
+
+.nav > li > a > img {
+  max-width: none; }
+
+.nav-tabs {
+  border-bottom: 1px solid #ddd; }
+
+.nav-tabs > li {
+  float: left;
+  margin-bottom: -1px; }
+
+.nav-tabs > li > a {
+  margin-right: 2px;
+  line-height: 1.42857;
+  border: 1px solid transparent;
+  border-radius: 4px 4px 0 0; }
+
+.nav-tabs > li > a:hover {
+  border-color: #eeeeee #eeeeee #ddd; }
+
+.nav-tabs > li.active > a,
+.nav-tabs > li.active > a:hover,
+.nav-tabs > li.active > a:focus {
+  color: #555555;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-bottom-color: transparent;
+  cursor: default; }
+
+.nav-pills > li {
+  float: left; }
+
+.nav-pills > li > a {
+  border-radius: 4px; }
+
+.nav-pills > li + li {
+  margin-left: 2px; }
+
+.nav-pills > li.active > a,
+.nav-pills > li.active > a:hover,
+.nav-pills > li.active > a:focus {
+  color: #fff;
+  background-color: #337ab7; }
+
+.nav-stacked > li {
+  float: none; }
+
+.nav-stacked > li + li {
+  margin-top: 2px;
+  margin-left: 0; }
+
+.nav-justified, .nav-tabs.nav-justified {
+  width: 100%; }
+
+.nav-justified > li, .nav-tabs.nav-justified > li {
+  float: none; }
+
+.nav-justified > li > a, .nav-tabs.nav-justified > li > a {
+  text-align: center;
+  margin-bottom: 5px; }
+
+.nav-justified > .dropdown .dropdown-menu {
+  top: auto;
+  left: auto; }
+
+@media (min-width: 768px) {
+  .nav-justified > li, .nav-tabs.nav-justified > li {
+    display: table-cell;
+    width: 1%; }
+  .nav-justified > li > a, .nav-tabs.nav-justified > li > a {
+    margin-bottom: 0; } }
+
+.nav-tabs-justified, .nav-tabs.nav-justified {
+  border-bottom: 0; }
+
+.nav-tabs-justified > li > a, .nav-tabs.nav-justified > li > a {
+  margin-right: 0;
+  border-radius: 4px; }
+
+.nav-tabs-justified > .active > a,
+.nav-tabs.nav-justified > .active > a, .nav-tabs-justified > .active > a:hover,
+.nav-tabs.nav-justified > .active > a:hover, .nav-tabs-justified > .active > a:focus, .nav-tabs.nav-justified > .active > a:focus {
+  border: 1px solid #ddd; }
+
+@media (min-width: 768px) {
+  .nav-tabs-justified > li > a, .nav-tabs.nav-justified > li > a {
+    border-bottom: 1px solid #ddd;
+    border-radius: 4px 4px 0 0; }
+  .nav-tabs-justified > .active > a,
+  .nav-tabs.nav-justified > .active > a, .nav-tabs-justified > .active > a:hover,
+  .nav-tabs.nav-justified > .active > a:hover, .nav-tabs-justified > .active > a:focus, .nav-tabs.nav-justified > .active > a:focus {
+    border-bottom-color: #fff; } }
+
+.tab-content > .tab-pane {
+  display: none; }
+
+.tab-content > .active {
+  display: block; }
+
+.nav-tabs .dropdown-menu {
+  margin-top: -1px;
+  border-top-right-radius: 0;
+  border-top-left-radius: 0; }
+
 .close {
   float: right;
   font-size: 21px;
@@ -1090,7 +1242,8 @@ body {
   -webkit-flex-direction: column;
   -ms-flex-direction: column;
   flex-direction: column;
-  margin: 0; }
+  margin: 0;
+  position: relative; }
 
 .page-wrap {
   -webkit-flex: 1;
@@ -1343,8 +1496,11 @@ img {
 .background-light-gray {
   background-color: #F7F7F7; }
 
-.insights {
+.seafoam-bg {
   background-color: #F4FBF9; }
+
+.dark-seafoam-bg {
+  background-color: #e4f4f1; }
 
 .similar-properties-gray {
   background-color: #E5E4E4; }
@@ -4295,12 +4451,81 @@ nav a .left {
 nav a:focus {
   outline: none; }
 
-nav li a:hover, nav li a:focus, nav li a.current {
+nav#secondary-nav {
+  z-index: 100; }
+
+nav#secondary-nav.stuck {
+  position: fixed;
+  margin-top: 78px; }
+
+nav#secondary-nav ul li {
+  box-sizing: border-box;
+  width: 25%;
+  float: left;
+  border-radius: 0;
+  border-right: 1px solid #25282A;
+  background-color: #CCCCCC; }
+
+nav#secondary-nav ul li:nth-child(4n + 1) {
+  margin-left: 0;
+  margin-right: -100%;
+  clear: both; }
+
+nav#secondary-nav ul li:nth-child(4n + 2) {
+  margin-left: 25%;
+  margin-right: -100%;
+  clear: none; }
+
+nav#secondary-nav ul li:nth-child(4n + 3) {
+  margin-left: 50%;
+  margin-right: -100%;
+  clear: none; }
+
+nav#secondary-nav ul li:nth-child(4n + 4) {
+  margin-left: 75%;
+  margin-right: -100%;
+  clear: none; }
+
+nav#secondary-nav ul li a {
+  display: block;
+  text-align: center;
+  color: white;
+  font-family: "Copernicus-Medium";
+  font-size: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px; }
+
+nav#secondary-nav ul li a:last-of-type {
+  border-right: none; }
+
+nav#secondary-nav ul li a:hover {
+  box-shadow: none;
+  background-color: #009B77; }
+
+nav#secondary-nav ul li.active {
+  background-color: #009B77; }
+
+nav#secondary-nav ul li.active.muted {
+  background-color: #CCCCCC; }
+
+nav#secondary-nav ul li.active a {
+  box-shadow: none; }
+
+.secondary-nav-link {
+  display: block !important;
+  position: relative !important;
+  margin: 0 !important;
+  padding: 0 !important;
+  height: 0 !important;
+  top: -232px;
+  visibility: hidden !important; }
+
+nav li a:hover, nav li a:focus, nav li a.active {
   background-color: transparent;
   color: #009880;
   box-shadow: 0px 3px 0px 0px; }
 
-nav li a:hover.muted, nav li a:hover.btn-contact, nav li a:focus.muted, nav li a:focus.btn-contact, nav li a.current.muted, nav li a.current.btn-contact {
+nav li a:hover.muted, nav li a:hover.btn-contact, nav li a:focus.muted, nav li a:focus.btn-contact, nav li a.active.muted, nav li a.active.btn-contact {
   box-shadow: 0px 0px 0px 0px; }
 
 nav li a.current.muted:hover {
@@ -4387,6 +4612,12 @@ section.properties {
 section.leading {
   margin-top: 78px; }
 
+section h3:first-child {
+  text-align: center;
+  font-weight: 700;
+  text-transform: uppercase;
+  padding-bottom: 30px; }
+
 .light-gray-bg {
   background-color: #ECEBEC; }
 
@@ -4422,6 +4653,10 @@ section.leading {
 
 .circle-leader .circle svg * {
   fill: #404041; }
+
+h3 {
+  font-family: Arial, "Lucida Grande", sans-serif;
+  font-size: 17px; }
 
 .Select {
   border: 1px solid transparent; }
@@ -4998,15 +5233,15 @@ section.leading {
 
 .agent-individual main .agent-properties {
   padding: 30px;
-  margin-bottom: 60px; }
+  margin-bottom: 60px;
+  box-sizing: border-box;
+  width: 100%;
+  float: left; }
 
-.agent-individual main .agent-property-carousel {
-  margin-left: 8.33333%;
-  margin-right: 8.33333%; }
-
-.agent-individual main .agent-property-carousel a {
-  margin: 10px;
-  padding: 10px; }
+.agent-individual main .agent-properties:before, .agent-individual main .agent-properties:after {
+  content: "";
+  display: table;
+  clear: both; }
 
 .agent-individual main .recent-transactions div {
   border-top: 1px solid #25282A; }
@@ -5444,8 +5679,29 @@ section.leading {
   display: table;
   clear: both; }
 
-.property_tile.slick-initialized a {
-  margin: 10px; }
+.property_tile.property_tile_1 {
+  margin-left: 33.33333%;
+  box-sizing: border-box;
+  width: 33.33333%;
+  float: left; }
+
+.property_tile.property_tile_1.agent_tile {
+  margin-left: 16.66667%;
+  box-sizing: border-box;
+  width: 66.66667%;
+  float: left; }
+
+.property_tile.property_tile_2 {
+  margin-left: 16.66667%;
+  box-sizing: border-box;
+  width: 66.66667%;
+  float: left; }
+
+.property_tile.property_tile_2.agent_tile {
+  margin-left: 8.33333%;
+  box-sizing: border-box;
+  width: 83.33333%;
+  float: left; }
 
 .property_box {
   display: -webkit-flex;
