--- a/statamic/_themes/main/partials/property_tile_agent.html
+++ b/statamic/_themes/main/partials/property_tile_agent.html
@@ -1,12 +1,12 @@
 {{ if no_results }}
 {{ else }}
 {{ if first }}
+<div class="agent-properties background-gray">
+<h1>Current Listings</h1>
 {{ if total_results == 1}}
-<div class="property_tile property_tile_1">
-{{ elseif total_results ==2 }}
-<div class="property_tile property_tile_2">
+<div class="property_tile property_tile_1 agent_tile">
 {{ else }}
-<div class="property_tile property_tile_3">
+<div class="property_tile property_tile_2 agent_tile">
 {{ endif }}
 {{ endif }}
 <div>
@@ -37,5 +37,11 @@
 </div>
 {{ if last }}
 </div>
+</div>
+</div>
 {{ endif }}
 {{ endif }}
+
+
+
+
