--- a/statamic/_themes/main/templates/landing.html
+++ b/statamic/_themes/main/templates/landing.html
@@ -66,14 +66,12 @@
 			<h4>FEATURED PROPERTIES</h4>
 		</div>
 		<div class="container">
-				<div class="property_tile">
-					{{ entries:listing folder="properties/sale" conditions="featured"}}
+					{{ entries:listing folder="properties/sale" conditions="featured" }}
 						{{ theme:partial src="property_tile" use_context="true" }}
 					{{ /entries:listing }}
-				</div>
 		</div>
 	</section>
-	<section id="featured-properties" class="insights">
+	<section id="featured-properties" class="seafoam-bg">
 		<div class="circle-leader">
 			<div class="circle insights">
 				{{ theme:partial src="svg/home_book" }}
