--- a/statamic/_themes/main/partials/nav.html
+++ b/statamic/_themes/main/partials/nav.html
@@ -1,6 +1,6 @@
 <header>
 <div class="container">
-  <nav>
+  <nav id="primary-nav">
     <ul class="left">
       <li>
         <a class="left" href="{{ homepage }}">
@@ -10,7 +10,7 @@
     </ul >
       <ul class="right">
         {{ nav from="/" max_depth="1" }}
-        <li><a href="{{ url }}"{{ if is_current || is_parent }} class="active"{{ endif }}>{{ title }} </a>
+        <li><a href="{{ url }}"{{ if is_current || is_parent }} class="current"{{ endif }}>{{ title }} </a>
          {{ if is_current || is_parent }}
          {{ if children }}
          <ul>
