fixed agent h3 style

--- a/src/scss/components/_agent_individual.scss
+++ b/src/scss/components/_agent_individual.scss
@@ -12,6 +12,9 @@
 			font-family: $header-font-bold;
 			font-size: 22px;
 		}
+		h3 {
+			text-align: left;
+		}
 		svg {
 			height: 25px;
 			width: 25px;
