fixed agent h3 style

--- a/src/scss/components/_section_styles.scss
+++ b/src/scss/components/_section_styles.scss
@@ -11,12 +11,12 @@ section {
 	&.leading {
 		margin-top: 78px;
 	}
-	h3:first-child {
-		text-align: center;
-		font-weight: 700;
-		text-transform: uppercase;
-		padding-bottom: 30px;
-	}
+	// h3:first-child {
+	// 	text-align: center;
+	// 	font-weight: 700;
+	// 	text-transform: uppercase;
+	// 	padding-bottom: 30px;
+	// }
 }
 
 .light-gray-bg {
