--- a/statamic/_themes/main/templates/neighborhood_individual.html
+++ b/statamic/_themes/main/templates/neighborhood_individual.html
@@ -1,5 +1,6 @@
 	<section class="hero small leading" style="background-image: url( {{ path src="{{ hero_image }}" }} );">
 		<h1>{{ title }}</h1>
+		<div class="mask"></div>
 	</section>
 	<nav id="secondary-nav">
 	   <ul class="nav" role="tablist">
