--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -89,16 +89,16 @@ nav {
 				}
 				&:hover {
 					box-shadow: none;
-					background-color: $text-green;
+					background-color: darken(#CCCCCC, 10%);
 				}
 			}
 			&.active {
 				background-color: $text-green;
-				&.muted {
-					background-color: #CCCCCC;
-				}
 				a {
 					box-shadow: none;
+					&:hover {
+						background-color: lighten($text-green,2%);
+					}
 				}
 			}
 		}
@@ -115,7 +115,7 @@ nav {
 	visibility: hidden!important;
 }
 
-nav li a:hover, nav li a:focus, nav li a.current {
+nav li a:hover, nav li a.current {
 	// background-color: transparent;
 	color: $green;
 	box-shadow: 0px 3px 0px 0px;
