--- a/src/scss/modules/_hero.scss
+++ b/src/scss/modules/_hero.scss
@@ -1,5 +1,22 @@
 .hero {
 	height: 600px;
+	position: relative;
+
+	* {
+		z-index: 10;
+	}
+	.mask {
+		z-index: 9;
+		position: absolute;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		background-color: black;
+		opacity: .3;
+		height: 100%;
+		width: 100%;
+	}
 	&.small {
 		height: 450px;
 	}
